--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </button>
       </div>
       <div id="socials-container">
-        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
+        <img src="./assets/linkedin.webp" alt="My LinkedIn profile" class="icon"
           onclick="location.href='https://www.linkedin.com/in/ammar-almajed/'" />
-        <img src="./assets/github.png" alt="My Github profile" class="icon"
+        <img src="./assets/github.webp" alt="My Github profile" class="icon"
           onclick="location.href='https://github.com/AlmajedA'" />
       </div>
     </div>
@@ -78,12 +78,12 @@
       <div class="about-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <img src="./assets/experience.png" alt="Experience icon" class="icon" />
+            <img src="./assets/experience.webp" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
             <p>Fresh graduate<br />Software Engineer</p>
           </div>
           <div class="details-container">
-            <img src="./assets/education.png" alt="Education icon" class="icon" />
+            <img src="./assets/education.webp" alt="Education icon" class="icon" />
             <h3>Education</h3>
             <p>B.S. in Software Engineering<br />Major Concentration in AI and ML</p>
           </div>
@@ -97,7 +97,7 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
+    <img src="./assets/arrow.webp" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
   </section>
 
   <!-- Experience -->
@@ -110,49 +110,49 @@
           <h2 class="experience-sub-title">Frontend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>HTML</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>CSS</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>AngularJS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>SASS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>JavaScript</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>TypeScript</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>UI</h3>
                 <p>Intermediate</p>
@@ -164,7 +164,7 @@
           <h2 class="experience-sub-title">Backend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>Django</h3>
                 <p>Intermediate</p>
@@ -172,28 +172,28 @@
             </article>
 
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>Node JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>Express JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>PostgreSQL</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
                 <h3>Docker</h3>
                 <p>Intermediate</p>
@@ -203,7 +203,7 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+    <img src="./assets/arrow.webp" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
 
   <!-- Projects -->
@@ -274,7 +274,7 @@
 
     </div>
 
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+    <img src="./assets/arrow.webp" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
 
   <!-- Contact -->
@@ -283,11 +283,11 @@
     <h1 class="title">Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
+        <img src="./assets/email.webp" alt="Email icon" class="icon contact-icon email-icon" />
         <p><a href="mailto:ammaralmajed7@gmail.com">ammaralmajed7&#64;gmail.com</a></p>
       </div>
       <div class="contact-info-container">
-        <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+        <img src="./assets/linkedin.webp" alt="LinkedIn icon" class="icon contact-icon" />
         <p><a href="https://www.linkedin.com/in/ammar-almajed/">LinkedIn</a></p>
       </div>
     </div>
