--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <article>
               <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
               <div>
-                <h3>AngularJS</h3>
+                <h3>Angular</h3>
                 <p>Intermediate</p>
               </div>
             </article>
