--- a/index.html
+++ b/index.html
@@ -2,311 +2,30 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="mediaqueries.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Animated Letters</title>
+  <link rel="stylesheet" href="style/index.css">
 </head>
 
 <body>
+  <div class="container">
+    <h1 id="name"></h1>
+    <h2 id="major"></h2>
+    <h2>
+      <span class="get-start" id="start"></span>
+    </h2>
 
-  <!-- Navbar -->
-  <nav id="desktop-nav">
-    <div class="logo">Ammar Almajed</div>
-    <div>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-  <nav id="hamburger-nav">
-    <div class="logo">Ammar Almajed</div>
-    <div class="hamburger-menu">
-      <div class="hamburger-icon" onclick="toggleMenu()">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div class="menu-links">
-        <li><a href="#about" onclick="toggleMenu()">About</a></li>
-        <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-        <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-        <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Profile Section -->
-  <section id="profile">
-    <div class="section__pic-container">
-      <img src="./assets/profile-pic.webp" alt="Ammar Almajed profile picture" class="profile-pic" />
-    </div>
-    <div class="section__text">
-      <p class="section__text__p1">Hello, I'm</p>
-      <h1 class="title">Ammar Almajed</h1>
-      <p class="section__text__p2">Software Engineer</p>
-      <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">
-          Download CV
-        </button>
-        <button class="btn btn-color-1" onclick="location.href='./#contact'">
-          Contact Info
-        </button>
-      </div>
-      <div id="socials-container">
-        <img src="./assets/linkedin.webp" alt="My LinkedIn profile" class="icon"
-          onclick="location.href='https://www.linkedin.com/in/ammar-almajed/'" />
-        <img src="./assets/github.webp" alt="My Github profile" class="icon"
-          onclick="location.href='https://github.com/AlmajedA'" />
-      </div>
-    </div>
-  </section>
-
-  <!-- About Section -->
-  <section id="about">
-    <p class="section__text__p1">Get To Know More</p>
-    <h1 class="title">About Me</h1>
-    <div class="section-container">
-      <div class="section__pic-container">
-        <img src="./assets/about-pic.webp " alt="Profile picture" class="about-pic" />
-      </div>
-      <div class="about-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <img src="./assets/experience.webp" alt="Experience icon" class="icon" />
-            <h3>Experience</h3>
-            <p>Fresh graduate<br />Software Engineer</p>
-          </div>
-          <div class="details-container">
-            <img src="./assets/education.webp" alt="Education icon" class="icon" />
-            <h3>Education</h3>
-            <p>B.S. in Software Engineering<br />Major Concentration in AI and ML</p>
-          </div>
-        </div>
-        <div class="text-container">
-          <p>
-            Software Engineering student graduated recently from KFUPM, Saudi Arabia. I am familiar with all the
-            software engineering phases, I have gathered requirement, designed UIs, developed codes, tested codes, and
-            maintained projects. I also have decent knowledge in AI and ML.
-          </p>
-        </div>
-      </div>
-    </div>
-    <img src="./assets/arrow.webp" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
-  </section>
-
-  <!-- Experience -->
-  <section id="experience">
-    <p class="section__text__p1">Explore My</p>
-    <h1 class="title">Experience</h1>
-    <div class="experience-details-container">
-      <div class="about-containers">
-        <div class="details-container">
-          <h2 class="experience-sub-title">Frontend Development</h2>
-          <div class="article-container">
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>HTML</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>CSS</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Angular</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>SASS</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>JavaScript</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>TypeScript</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>UI</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-          </div>
-        </div>
-        <div class="details-container">
-          <h2 class="experience-sub-title">Backend Development</h2>
-          <div class="article-container">
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Django</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Node JS</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Express JS</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>PostgreSQL</h3>
-                <p>Basic</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.webp" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Docker</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-          </div>
-        </div>
-      </div>
-    </div>
-    <img src="./assets/arrow.webp" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
-  </section>
-
-  <!-- Projects -->
-  <section id="projects">
-    <p class="section__text__p1">Browse My Recent</p>
-    <h1 class="title">Projects</h1>
-    <div class="projects-container">
-
-      <!-- Project -->
-      <div class="project">
-        <img src="./assets/wikiproduct.webp" alt="" class="project-img">
-        <div class="project-btns">
-          <button class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/WikiProductOfficial/WikiProductOfficial.git'">Github</button>
-          <button class=" btn btn-color-2 project-btn"
-            onclick="location.href='https://wikiproduct.up.railway.app/'">Demo</button>
-        </div>
-        <h3 class="project-title">Wikiproduct</h3>
-        <p class="project-desc">
-          Wikiproduct is a service that enables users to search for any items in the internet and
-          display the products
-          in a nice way to virsulize, in addition of the ability to chat with a chatbot to get the help the user to get
-          the necessary help
-        </p>
-      </div>
-
-      <!-- Project 2 -->
-      <div class="project">
-        <img src="./assets/benchmarking.webp" alt="" class="project-img">
-        <div class="project-btns">
-          <button class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/Elyas1422/multiclass_classifiers_benchmarking.git'">Github</button>
-        </div>
-        <h3 class="project-title">Benchmarking</h3>
-        <p class="project-desc">Develop diverse models, including SVM, NN, DT, and XGB on a dataset to measure each
-          model performance
-          and selecting the best model with 94% accuracy. In addition, develop an active learning mechanism that
-          enabled the model to achieve similar levels of accuracy with less amount of data.</p>
-      </div>
-
-      <!-- Project 3 -->
-      <div class="project">
-        <img src="./assets/blog.webp" alt="" class="project-img">
-        <div class="project-btns">
-          <button class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/AlmajedA/blog'">Github</button>
-        </div>
-        <h3 class="project-title">Blog</h3>
-        <p class="project-desc">
-          A simple blog website that enables users to read, post, and intract with other blogs in English and in Arabic.
-        </p>
-      </div>
-
-      <!-- Project 4 -->
-      <div class="project">
-        <img src="./assets/cv-displayer.webp" alt="" class="project-img">
-        <div class="project-btns">
-          <button class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/AlmajedA/CV-displayer'">Github</button>
-        </div>
-        <h3 class="project-title">CV Displayer</h3>
-        <p class="project-desc">
-          A CV displayer that takes a JSON formated CV and display it its content in a nice design. It is built based on
-          Object Orianted Programming (OOP), and follows the abstraction and encapsulation ideas, single responsibility
-          and Open-Closed principles.
-        </p>
-      </div>
+    <div class="contact-info">
+      <p>Contact Information:</p>
+      <p>Phone: <a href="tel:+966542463848">+966542463848</a></p>
+      <p>Email: <a href="mailto:ammaralmajed7@gmail.com">ammaralmajed7@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/ammar-almajed/">LinkedIn</a></p>
 
     </div>
+  </div>
 
-    <img src="./assets/arrow.webp" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <p class="section__text__p1">Get in Touch</p>
-    <h1 class="title">Contact Me</h1>
-    <div class="contact-info-upper-container">
-      <div class="contact-info-container">
-        <img src="./assets/email.webp" alt="Email icon" class="icon contact-icon email-icon" />
-        <p><a href="mailto:ammaralmajed7@gmail.com">ammaralmajed7&#64;gmail.com</a></p>
-      </div>
-      <div class="contact-info-container">
-        <img src="./assets/linkedin.webp" alt="LinkedIn icon" class="icon contact-icon" />
-        <p><a href="https://www.linkedin.com/in/ammar-almajed/">LinkedIn</a></p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <nav>
-      <div class="nav-links-container">
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-  </footer>
-  <script src="script.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
